--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,9 @@
     <license>Apache 2.0</license>
     <keywords>cordova,settings,appsettings</keywords>
 
-    <js-module src="www/appsettings.js" name="appsettings" />
+  <js-module src="www/appsettings.js" name="appsettings"> 
+    <clobbers target="navigator.appsettings" /> 
+  </js-module>
 
   <!-- android -->
   <platform name="android">
