--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@
     <keywords>cordova,settings,appsettings</keywords>
 
   <js-module src="www/appsettings.js" name="appsettings"> 
-    <clobbers target="navigator.appsettings" /> 
+    <merges target="navigator.appsettings" /> 
   </js-module>
 
   <!-- android -->
