--- a/plugin.xml
+++ b/plugin.xml
@@ -3,16 +3,19 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:rim="http://www.blackberry.com/ns/widgets"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="org.apache.cordova.appsettings"
-    version="0.1">
+    id="cordova-plugin-appsettings"
+    version="1.0.2">
     <name>Settings Plugin</name>
+    <author>Wizky LLC</author>
     <description>Cordova Config.XML settings access Plugin</description>
-    <license>Apache 2.0</license>
-    <keywords>cordova,settings,appsettings</keywords>
+    <license>MIT</license>
+    <keywords>cordova,settings,appsettings,config.xml</keywords>
+    <repo>https://github.com/mkliu/cordova-plugin-appsettings.git</repo>
+    <issue>https://github.com/mkliu/cordova-plugin-appsettings/issues</issue>
 
-  <js-module src="www/appsettings.js" name="appsettings"> 
-    <merges target="navigator.appsettings" /> 
-  </js-module>
+    <js-module src="www/appsettings.js" name="AppSettings" >
+        <clobbers target="AppSettings" />
+    </js-module>
 
   <!-- android -->
   <platform name="android">
@@ -20,11 +23,8 @@
       <feature name="AppSettings" >
         <param name="android-package" value="org.apache.cordova.appsettings.AppSettings"/>
       </feature>
-      <preference name="CouchdbUrl" value="http://172.23.188.139:5900" />
-      <preference name="CouchdbPrivateUrl" value="http://172.23.188.139:5900" />
-      <preference name="TestSha" value="shashashasha" />
     </config-file>
-    
+
     <source-file src="src/android/AppSettings.java" target-dir="src/org/apache/cordova/appsettings" />
   </platform>
 
@@ -34,13 +34,10 @@
       <feature name="AppSettings">
         <param name="ios-package" value="AppSettings"/>
       </feature>
-      <preference name="CouchdbUrl" value="http://172.23.188.139:5900" />
-      <preference name="CouchdbPrivateUrl" value="http://172.23.188.139/:5900" />
-      <preference name="TestSha" value="shashashasha" />
     </config-file>
-    
+
     <header-file src="src/ios/AppSettings.h" />
     <source-file src="src/ios/AppSettings.m" />
   </platform>
-  
+
 </plugin>
