--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
     <issue>https://github.com/mkliu/cordova-plugin-appsettings/issues</issue>
 
     <js-module src="www/appsettings.js" name="AppSettings" >
-        <merges target="AppSettings" />
+      <clobbers target="AppSettings" />
     </js-module>
 
   <!-- android -->
