--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,10 @@
     <repo>https://github.com/mkliu/cordova-plugin-appsettings.git</repo>
     <issue>https://github.com/mkliu/cordova-plugin-appsettings/issues</issue>
 
+   <engines>
+     <engine name="cordova" version=">=5.0.0" />
+   </engines>
+    
     <js-module src="www/appsettings.js" name="AppSettings" >
       <clobbers target="AppSettings" />
     </js-module>
